# CN

./: .gitignore
Socket Programming/client/: build_executable.sh  client  client.spec
Socket Programming/client/src/: main.py
Socket Programming/client/src/ftp/: __init__.py
Socket Programming/client/src/ftp/core/: __init__.py  client.py  commands.py  connection.py  parser.py  transfer.py
Socket Programming/client/src/ftp/ui/: __init__.py  cli.py  gui.py
Socket Programming/doc/: report.tex
Socket Programming/server/: CMakeLists.txt  Makefile  README  users.db.example
Socket Programming/server/include/: auth.h  command.h  filelock.h  filesys.h  logger.h  network.h  protocol.h  server.h  session.h  transfer.h  utils.h
Socket Programming/server/src/: auth.c  command.c  filelock.c  filesys.c  handler.c  logger.c  main.c  network.c  protocol.c  server.c  session.c  transfer.c  utils.c
Socket Programming/server/test/: CMakeLists.txt  test_abor.py  test_basic.py  test_comprehensive.py  test_filesys.c  test_logger.c  test_rest.py  test_rnfr_rnto_dele.py
Socket Programming/udp/c/: client  client.c  server  server.c
Socket Programming/udp/csharp/: Socket Programming.sln
Socket Programming/udp/csharp/Client/: Client.cs
Socket Programming/udp/csharp/Server/: Server.cs
Socket Programming/udp/doc/: answer.md
Socket Programming/udp/node/: client.js  server.js
Socket Programming/udp/python/: client.py  server.py
Socket Programming/udp/src/: UDPClient.java  UDPServer.java
